[package]
name = "cli-grrs"
version = "0.1.0"
edition = "2021"
authors = ["Mimanshu Maheshwari maheshwarimimanshu@gmail.com"]
license = "MIT OR Apache-2.0"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/AvidVivarta"
repository = "https://github.com/AvidVivarta/cli-grrs-rust-practice"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version ="4.0", features = ["derive"]}
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
predicates = "3.0.3"
